fix toasts overflow on mobile

--- a/src/components/Toasts.scss
+++ b/src/components/Toasts.scss
@@ -1,13 +1,4 @@
 .Toaster {
-  &__manager-top {
-    max-width: 90%;
-    width: 760px;
-  }
-
-  &__alert_text {
-    padding: 1rem;
-  }
-
   &__alert_close {
     font-size: 2rem;
   }
